--- a/src/client/styles/components/ItemsContainer.scss
+++ b/src/client/styles/components/ItemsContainer.scss
@@ -156,7 +156,7 @@ button.item-table-filters {
 
     th {
       padding-top: 0;
-      width: auto;
+      // width: auto;
     }
   }
 
